[gd_scene load_steps=7 format=3 uid="uid://b0hx1753xcng"]

[ext_resource type="Script" path="res://scene/menu/script/mainMenu.gd" id="1_uuyvg"]
[ext_resource type="Texture2D" uid="uid://ddujgl5anueyw" path="res://scene/menu/sprites/light.png" id="2_ctm8a"]
[ext_resource type="Texture2D" uid="uid://cn0txfqsqytat" path="res://scene/menu/sprites/dungeon background 1.png" id="3_mapaa"]
[ext_resource type="PackedScene" uid="uid://bgexxbxrmkhn2" path="res://scene/menu/scene/save_menu.tscn" id="4_rtcdv"]

[sub_resource type="Animation" id="Animation_m6cvv"]
resource_name = "flashing_light"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.1, 2.0, 0.1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fmfvi"]
_data = {
"flashing_light": SubResource("Animation_m6cvv")
}

[node name="MianMenu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uuyvg")

[node name="Label" type="Label" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -47.0
offset_bottom = 23.0
grow_horizontal = 0
text = "pause
"

[node name="PointLight2D" type="PointLight2D" parent="."]
light_mask = 1023
visibility_layer = 1023
position = Vector2(469, 454)
color = Color(1, 0.101961, 1, 1)
energy = 0.1
texture = ExtResource("2_ctm8a")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mapaa")

[node name="GameNameLable" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 300.0
offset_right = 100.0
offset_bottom = 357.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "轮回法官"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -60.0
offset_right = 36.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuStartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "新游戏"

[node name="MenuContinueButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "继续游戏"

[node name="MenuSettingButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "设置"

[node name="MenuExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "退出游戏"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fmfvi")
}
autoplay = "flashing_light"

[node name="SaveMenu" parent="." instance=ExtResource("4_rtcdv")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="VBoxContainer/MenuStartButton" to="." method="_on_menu_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuContinueButton" to="." method="_on_menu_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuSettingButton" to="." method="_on_menu_setting_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuExitButton" to="." method="_on_menu_exit_button_pressed"]
